# test-playground

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-on_pr_main.yml  ci-on_pr_main_bash.yml  ci-on_pr_main_gh-action.yml  python-package.yml
docs/: functions.md  index.md
docs/tp_package/: functions.md
scripts/: ci-on_pr_main.sh  lint.sh
tests/test_tp_package/: test_functions.py
tp_package/: functions.py
